<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dependentsbackground"
    tools:context=".DependentsActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:layout_marginStart="94dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#D30000"
        android:text="I have no dependents"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="366dp"
        android:layout_height="481dp"
        android:layout_marginTop="200dp"
        android:backgroundTint="#FFCF31"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/dependDOBTxtF"
                android:layout_width="242dp"
                android:layout_height="50dp"
                android:background="@drawable/custom_cardview"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:fontFamily="@font/aoboshi_one"
                android:hint="DOB MM/DD/YYYY"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.658" />

            <EditText
                android:id="@+id/dependSSNTxtF3"
                android:layout_width="242dp"
                android:layout_height="50dp"
                android:background="@drawable/custom_cardview"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:fontFamily="@font/aoboshi_one"
                android:hint="Social Security"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <EditText
                android:id="@+id/dependLastNameTxtF"
                android:layout_width="242dp"
                android:layout_height="50dp"
                android:background="@drawable/custom_cardview"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:fontFamily="@font/aoboshi_one"
                android:hint="Last Name"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.341" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="301dp"
                android:layout_height="45dp"
                android:fontFamily="@font/aoboshi_one"
                android:text="Enter any dependents"
                android:textAlignment="center"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.036" />

            <EditText
                android:id="@+id/dependFirstNameTxtF"
                android:layout_width="242dp"
                android:layout_height="50dp"
                android:background="@drawable/custom_cardview"
                android:backgroundTint="@color/black"
                android:ems="10"
                android:fontFamily="@font/aoboshi_one"
                android:hint="First Name"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.185" />

            <Button
                android:id="@+id/addDependBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="13dp"
                android:backgroundTint="#1168BD"
                android:text="Add dependent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="250dp"
                android:layout_height="44dp"
                android:backgroundTint="#C76060"
                android:entries="@array/relationships"
                android:background="@drawable/custom_cardview"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.534"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.81" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>