<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="330dp"
        android:layout_height="352dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="174dp"
        android:backgroundTint="#FFC131"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/passwordEditTxt"
                android:layout_width="293dp"
                android:layout_height="63dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/custom_cardview"
                android:backgroundTint="@color/black"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:fontFamily="@font/aoboshi_one"
                android:hint="Password"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditTxt" />

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="137dp"
                android:layout_height="58dp"
                android:layout_marginStart="146dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="143dp"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/belanosima_semibold"
                android:text="Login"
                android:textAlignment="center"
                android:textColor="#2863ED"
                android:textSize="45dp"
                app:layout_constraintBottom_toTopOf="@+id/emailEditTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.32" />

            <EditText
                android:id="@+id/emailEditTxt"
                android:layout_width="293dp"
                android:layout_height="63dp"
                android:layout_marginBottom="19dp"
                android:background="@drawable/custom_cardview"
                android:backgroundTint="@color/black"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:fontFamily="@font/aoboshi_one"
                android:hint="Email"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/passwordEditTxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.486"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="290dp"
                android:layout_height="59dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="38dp"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/aoboshi_one"
                android:text="Login"
                android:textSize="23dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordEditTxt" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/forgotPassTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Forgot Password?"
        android:textColor="#5FD541"
        app:layout_constraintBottom_toTopOf="@+id/signUpTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/signUpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dont have an account. Sign up today"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassTxt" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="107dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"

        android:layout_marginBottom="52dp"
        android:backgroundTint="#D30000"
        android:text="Sign Up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpTxt" />

    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="81dp"
        tools:layout_editor_absoluteY="635dp" />

    <Button
        android:id="@+id/forgotPassBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="29dp"
        android:text="Forgot Password?"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toEndOf="@+id/signUpBtn"
        app:layout_constraintTop_toBottomOf="@+id/signUpTxt"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>